fixed spacing issues

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,5 +1,5 @@
 body > #root > div {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App {
