--- a/src/components/wordbank/wordbank.css
+++ b/src/components/wordbank/wordbank.css
@@ -13,6 +13,10 @@
   font-size: 1.25rem;
 }
 
+#word9 {
+  margin-bottom: 0;
+}
+
 :root {
   --button-bg: #ff0081;
   --button-text-color: #ffffff;
